crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Possibly-not-callable_`__iter__`_method.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Possibly-not-callable `__iter__` method
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | def _(flag: bool):
 4 |     class Iterator:
 5 |         def __next__(self) -> int:
 6 |             return 42
 7 | 
 8 |     class CustomCallable:
 9 |         if flag:
10 |             def __call__(self, *args, **kwargs) -> Iterator:
11 |                 return Iterator()
12 |         else:
13 |             __call__: None = None
14 | 
15 |     class Iterable1:
16 |         __iter__: CustomCallable = CustomCallable()
17 | 
18 |     class Iterable2:
19 |         if flag:
20 |             def __iter__(self) -> Iterator:
21 |                 return Iterator()
22 |         else:
23 |             __iter__: None = None
24 | 
25 |     # error: [not-iterable]
26 |     for x in Iterable1():
27 |         # TODO... `int` might be ideal here?
28 |         reveal_type(x)  # revealed: int | Unknown
29 | 
30 |     # error: [not-iterable]
31 |     for y in Iterable2():
32 |         # TODO... `int` might be ideal here?
33 |         reveal_type(y)  # revealed: int | Unknown
```

# Diagnostics

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:26:14
   |
25 |     # error: [not-iterable]
26 |     for x in Iterable1():
   |              ^^^^^^^^^^^ Object of type `Iterable1` may not be iterable because its `__iter__` attribute (with type `CustomCallable`) may not be callable
27 |         # TODO... `int` might be ideal here?
28 |         reveal_type(x)  # revealed: int | Unknown
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:28:9
   |
26 |     for x in Iterable1():
27 |         # TODO... `int` might be ideal here?
28 |         reveal_type(x)  # revealed: int | Unknown
   |         -------------- info: Revealed type is `int | Unknown`
29 |
30 |     # error: [not-iterable]
   |

```

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:31:14
   |
30 |     # error: [not-iterable]
31 |     for y in Iterable2():
   |              ^^^^^^^^^^^ Object of type `Iterable2` may not be iterable because its `__iter__` attribute (with type `Literal[__iter__] | None`) may not be callable
32 |         # TODO... `int` might be ideal here?
33 |         reveal_type(y)  # revealed: int | Unknown
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:33:9
   |
31 |     for y in Iterable2():
32 |         # TODO... `int` might be ideal here?
33 |         reveal_type(y)  # revealed: int | Unknown
   |         -------------- info: Revealed type is `int | Unknown`
   |

```
